--- a/package.json
+++ b/package.json
@@ -1,23 +1,40 @@
 {
-  "name": "whatsapp-bot-casa-apostas",
+  "name": "whatsapp-pro",
   "version": "1.0.0",
-  "description": "Bot WhatsApp para casa de apostas com sistema administrativo",
-  "main": "index.js",
+  "description": "Plataforma profissional de marketing WhatsApp",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "server": "node server/index.js",
+    "dev:all": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
+    "next": "14.0.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "firebase": "^10.7.1",
     "express": "^4.18.2",
-    "moment-timezone": "^0.5.45",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4",
+    "whatsapp-web.js": "^1.23.0",
     "qrcode": "^1.5.3",
-    "qrcode-terminal": "^0.12.0",
-    "whatsapp-web.js": "^1.23.0"
+    "moment": "^2.29.4",
+    "lucide-react": "^0.294.0",
+    "recharts": "^2.8.0",
+    "react-hot-toast": "^2.4.1",
+    "framer-motion": "^10.16.16",
+    "csv-parser": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5",
+    "openai": "^4.20.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "concurrently": "^8.2.2"
   }
 }
