Corrigir erro do Chromium na Railway

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,7 @@
 NODE_ENV=production
 PORT=3000
 
-# Configurações do Puppeteer (Railway irá configurar automaticamente)
+# Configurações do Puppeteer para Railway
 PUPPETEER_EXECUTABLE_PATH=
+PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=false
+PUPPETEER_CACHE_DIR=/tmp/.puppeteer_cache
