--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
     "dev:all": "concurrently \"npm run dev\" \"npm run server\""
   },
   "dependencies": {
+    "puppeteer": "^21.6.1",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "firebase": "^10.7.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.4",
-    "socket.io-client": "^4.7.4",
+    "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0",
+    "moment": "^2.29.4"
     "qrcode": "^1.5.3",
     "moment": "^2.29.4",
     "lucide-react": "^0.294.0",
